[gd_scene load_steps=3 format=3 uid="uid://dhf1hbjhgi624"]

[ext_resource type="Script" path="res://Project88A.gd" id="1_68rbf"]

[sub_resource type="LabelSettings" id="LabelSettings_5omn1"]
font_size = 25

[node name="Project88A" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_68rbf")

[node name="Label1" type="Label" parent="."]
layout_mode = 0
offset_right = 448.0
offset_bottom = 128.0
text = "Enter Number 1:"
label_settings = SubResource("LabelSettings_5omn1")
vertical_alignment = 1

[node name="Label2" type="Label" parent="."]
layout_mode = 0
offset_top = 192.0
offset_right = 448.0
offset_bottom = 320.0
text = "Enter Number 2:"
label_settings = SubResource("LabelSettings_5omn1")
vertical_alignment = 1

[node name="LabelOut" type="Label" parent="."]
layout_mode = 0
offset_left = 704.0
offset_right = 1152.0
offset_bottom = 320.0
label_settings = SubResource("LabelSettings_5omn1")
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextNumber1" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 256.0
offset_right = 704.0
offset_bottom = 127.0

[node name="TextNumber2" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 256.0
offset_top = 192.0
offset_right = 704.0
offset_bottom = 319.0

[node name="ButtonCalculate" type="Button" parent="."]
layout_mode = 0
offset_top = 520.0
offset_right = 320.0
offset_bottom = 648.0
text = "Calculate"

[node name="ButtonClear" type="Button" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -320.0
offset_top = -128.0
grow_horizontal = 0
grow_vertical = 0
text = "Clear"

[node name="ButtonQuit2" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -162.0
offset_top = -128.0
offset_right = 162.0
grow_horizontal = 2
grow_vertical = 0
text = "Quit"

[connection signal="pressed" from="ButtonCalculate" to="." method="_on_button_calculate_pressed"]
[connection signal="pressed" from="ButtonClear" to="." method="_on_button_clear_pressed"]
[connection signal="pressed" from="ButtonQuit2" to="." method="_on_button_quit_pressed"]
